<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- app string -->
	<string name="app_name">SSHTunnel</string>
	<string name="ok_iknow">OK, I know</string>
	<string name="feedback">Feedback @ofmax</string>

	<!-- alert string -->
	<string name="port_empty">Port should not be empty</string>
	<string name="host_empty">Host should not be empty</string>
	<string name="local_port_empty">Local port should not be empty</string>
	<string name="remote_port_empty">Remote port should not be empty</string>
	<string name="number_alert">Please check your port number</string>
	<string name="user_empty">User name should not be empty</string>
	<string name="port_alert">The port number should be greater than 1024
	</string>
	<string name="crash_alert">You are recovering from a crash. \n\nplease report
		your
		problem to the project page. \n\n(sshtunnel.googlecode.com)
	</string>
	<string name="require_root_alert">PLEASE ROOT YOUR DEVICE FIRST !!!</string>

	<!-- error string -->
	<string name="fail_to_connect">cannot connect to the host</string>
	<string name="fail_to_authenticate">incorrect user name or password</string>
	<string name="fail_to_forward">failed to forward ports</string>
	<string name="fail_to_online">no network available</string>

	<!-- status string -->
	<string name="service_running">Running in the background</string>
	<string name="forward_success">Connected</string>
	<string name="forward_fail">Error</string>
	<string name="service_stopped">SSHTunnel service stopped</string>
	<string name="auto_reconnected">Reconnecting</string>
	<string name="reconnect_success">Reconnected</string>
	<string name="already_stopped">Service has been stopped already</string>
	<string name="already_running">Service has been started already</string>
	<string name="forward_stop">Disconnected</string>
	<string name="service_failed">Please check your network and login information
	</string>
	<string name="reconnect_fail">Cannot reconnect, service stopped</string>
	<string name="connecting">Connecting</string>
	<string name="auto_connecting">Connecting...</string>
	<string name="loading">Loading app list...</string>

	<!-- settings function category -->
	<string name="function_cat">Service Controller</string>
	<string name="disconnect">Disconnect</string>
	<string name="connect">Connect</string>
	<string name="service_controller">Tunnel Switch</string>
	<string name="service_summary">Enable / Disable SSH Tunnel</string>

	<!-- settings proxy category -->
	<string name="proxy_cat">SSH Tunnel Settings</string>
	<string name="host">Host</string>
	<string name="host_summary">The host name of SSH service</string>
	<string name="proxy_summary">SSH Tunnel URL</string>
	<string name="port">Port</string>
	<string name="port_summary">The port number of your SSH service</string>

	<!-- settings account category -->
	<string name="user_cat">Account Information</string>
	<string name="user">User</string>
	<string name="user_summary">SSH User name</string>
	<string name="password">Password / Passphrase</string>
	<string name="password_summary">SSH Password</string>

	<!-- settings port forwarding category -->
	<string name="socks">Use socks proxy</string>
	<string name="socks_summary">Enable dynamic port forwarding， redirect all ports
	</string>
	<string name="port_cat">Port Forwarding</string>
	<string name="local_port">Local Port</string>
	<string name="local_port_summary">Listening Port, default 1984</string>
	<string name="remote_address">Remote Address</string>
	<string name="remote_address_summary">Remote forwarding address，default 127.0.0.1
	</string>
	<string name="remote_port">Remote Port</string>
	<string name="remote_port_summary">Remote forwarding port，default 3128</string>

	<!-- settings feature category -->
	<string name="fearute_cat">Feature Settings</string>
	<string name="auto_connect">Auto Connect</string>
	<string name="auto_connect_summary">Start SSH Tunnel when network available</string>
	<string name="ssid">Binded NetWork</string>
	<string name="ssid_summary">Bind your proxy setting to 2G/3G Network or
		specified SSID
	</string>
	<string-array name="ssid_default_values"></string-array>
	<string-array name="ssid_default_entries"></string-array>
	<string name="auto_reconnect">Auto Reconnect</string>
	<string name="auto_reconnect_summary">Try to reconnect the SSH service, when connection
		closed unexpected
	</string>
	<string name="auto_set_gfwlist">Enable GFW List</string>
	<string name="auto_set_gfwlist_summary">Set proxy only for blocked sites (for users in
		China only)
	</string>
	<string name="auto_set_proxy">Global Proxy</string>
	<string name="auto_set_proxy_summary">Auto set up the global proxy (needs ROOT permission
		and IPTABLES support)
	</string>
	<string name="enable_market">Enable Market</string>
	<string name="enable_market_summary">Only for users in China, help to update app from
		Android Market (need reboot)
	</string>
	<string name="enable_dnsproxy">Enable DNS Proxy</string>
	<string name="enable_dnsproxy_summary">Enable DNS Proxy for some users behind a firewall
	</string>
	<string name="dnsproxy_addr">Upstream DNS Address</string>
	<string name="dnsproxy_addr_summary">The upstream DNS used by DNS Proxy, modify
		it only
		if you know what it is
	</string>

	<!-- settings proxyed apps category -->
	<string name="proxyed_apps">Individual Proxy</string>
	<string name="proxyed_apps_summary">Choose apps through proxy (needs ROOT permission
		and IPTABLES support)
	</string>
	<string name="proxyed_help">Select apps to use with SSHTunnel:</string>

	<!-- settings proxyed apps category -->
	<string name="upstream_proxy_cat">Upstream Proxy</string>
	<string name="upstream_enable">Enable Upstream Proxy</string>
	<string name="upstream_proxy">Proxy Address</string>
	<string name="upstream_proxy_summary">The upstream proxy used for connecting to SSH
		servers only supports http proxy. Input your proxy address like this:
		user:password@host:port
	</string>
	<string name="upstream_format_error">The upstream proxy is incorrect</string>

	<!-- menu bar category -->
	<string name="recovery">Reset</string>
	<string name="copy_rights">:\n\nSSHTunnel is an open source project
		published
		under
		the GPLV3. \n\nIf you have any question, please visit
		our project
		page on
		googlecode. \n\n(sshtunnel.googlecode.com)
	</string>
	<string name="about">About</string>
	<string name="change_name">Rename</string>
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_cancel">Cancel</string>

	<!-- settings notification category -->
	<string name="notif_cat">Notification settings</string>
	<string name="notif_ringtone_title">Select ringtone</string>
	<string name="notif_vibrate_title">Vibrate</string>
	<string name="notif_vibrate_summary">Also vibrate when connection status changes
	</string>
	<string name="update_finished">Programs and configurations have been updated
	</string>
	<string name="notif_icon">Show notification icon</string>

	<!-- profile switcher -->
	<string name="profile">Profiles</string>
	<string name="profile_default">Default Profile</string>
	<string name="profile_new">New Profile</string>
	<string name="profile_base">Profile</string>
	<string name="profile_del">Remove</string>

	<!-- file chooser -->
	<string name="file_chooser">Choose your key file</string>
	<string name="key_manager">Key File Manager</string>
	<string name="current_dir">Current Directory</string>
	<string name="parent_dir">Parent Directory</string>
	<string name="folder">Folder</string>
	<string name="file_size">File Size</string>
	<string name="file_toast">Use the key file: </string>

	<!-- GFW List -->
	<string-array name="gfw_list">
		<item>209.0.0.0/8</item>
		<item>72.0.0.0/8</item>
		<item>74.0.0.0/8</item>
		<item>68.0.0.0/8</item>
		<item>69.0.0.0/8</item>
		<item>66.0.0.0/8</item>
		<item>64.0.0.0/8</item>
		<item>199.0.0.0/8</item>
		<item>168.0.0.0/8</item>
		<item>67.0.0.0/8</item>
		<item>173.0.0.0/8</item>
		<item>202.248.0.0/16</item>
	</string-array>

	<!-- Finger Print Check -->
	<string name="finger_print_alert_title">WARNING!</string>
	<string name="finger_print_changed">The server\'s host key does not match the one
		SSHTunnel has cached, means that SSHTunnel has connected to the SSH
		server before, knows what its host key should be, but has found a
		different one.
	</string>
	<string name="finger_print_unknown">Unknown host key</string>
	<string name="finger_print_mismatch">Mismatched host key</string>
	<string name="finger_print_first">The server\'s host key is not cached. You have no
		guarantee that the server is the computer you think it is.
	</string>
	<string name="finger_print"> key fingerprint is </string>
	<string name="finger_print_accept">Accept</string>
	<string name="finger_print_deny">Deny</string>

</resources>
