<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/function_cat">
		<CheckBoxPreference android:key="isRunning"
			android:title="@string/service_controller" android:summary="@string/service_summary"></CheckBoxPreference>
		<ListPreference android:title="@string/profile"
			android:key="profile"></ListPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/proxy_cat">
		<EditTextPreference android:key="host"
			android:summary="@string/host_summary" android:title="@string/host"></EditTextPreference>
		<EditTextPreference android:title="@string/port"
			android:summary="@string/port_summary" android:key="port"
			android:defaultValue="22"></EditTextPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/user_cat">
		<EditTextPreference android:title="@string/user"
			android:key="user" android:summary="@string/user_summary"></EditTextPreference>
		<EditTextPreference android:title="@string/password"
			android:key="password" android:summary="@string/password_summary"
			android:password="true"></EditTextPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/port_cat">
		<CheckBoxPreference android:summary="@string/socks_summary"
			android:title="@string/socks" android:key="isSocks"></CheckBoxPreference>
		<EditTextPreference android:title="@string/local_port"
			android:key="localPort" android:summary="@string/local_port_summary"
			android:defaultValue="1984"></EditTextPreference>
		<EditTextPreference android:key="remoteAddress"
			android:title="@string/remote_address" android:summary="@string/remote_address_summary"
			android:defaultValue="127.0.0.1"></EditTextPreference>
		<EditTextPreference android:title="@string/remote_port"
			android:key="remotePort" android:summary="@string/remote_port_summary"
			android:defaultValue="3128"></EditTextPreference>


	</PreferenceCategory>
	<PreferenceCategory android:title="@string/fearute_cat">
		<CheckBoxPreference android:key="isAutoConnect"
			android:title="@string/auto_connect" android:summary="@string/auto_connect_summary"></CheckBoxPreference>
		<com.ksmaze.android.preference.ListPreferenceMultiSelect
			android:defaultValue="" android:key="ssid" android:title="@string/ssid"
			android:dialogTitle="@string/ssid" android:summary="@string/ssid_summary"
			android:entries="@array/ssid_default_entries" android:entryValues="@array/ssid_default_values" />
		<CheckBoxPreference android:key="isAutoReconnect"
			android:title="@string/auto_reconnect" android:summary="@string/auto_reconnect_summary"></CheckBoxPreference>
		<CheckBoxPreference android:summary="@string/auto_set_gfwlist_summary"
			android:key="isGFWList" android:title="@string/auto_set_gfwlist"
			android:defaultValue="false"></CheckBoxPreference>
		<CheckBoxPreference android:key="isAutoSetProxy"
			android:title="@string/auto_set_proxy" android:summary="@string/auto_set_proxy_summary"></CheckBoxPreference>
		<Preference android:key="proxyedApps" android:title="@string/proxyed_apps"
			android:summary="@string/proxyed_apps_summary"></Preference>
		<CheckBoxPreference android:title="@string/enable_market"
			android:summary="@string/enable_market_summary" android:key="isMarketEnable"></CheckBoxPreference>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/notif_cat">
		<RingtonePreference android:key="settings_key_notif_ringtone"
			android:title="@string/notif_ringtone_title" android:ringtoneType="notification"
			android:showDefault="true" android:showSilent="true" />
		<CheckBoxPreference android:key="settings_key_notif_vibrate"
			android:title="@string/notif_vibrate_title" android:summary="@string/notif_vibrate_summary"
			android:defaultValue="true" />
	</PreferenceCategory>



</PreferenceScreen>
