<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:text="@string/finger_print_changed" android:id="@+id/warning_text"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:padding="10sp"></TextView>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout1">
		<Button android:text="@string/finger_print_accept" android:id="@+id/accept"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_margin="2sp"
			android:layout_weight="1"></Button>
		<Button android:text="@string/finger_print_deny" android:id="@+id/deny"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_margin="2sp"
			android:layout_weight="1"></Button>
	</LinearLayout>


</LinearLayout>
